--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "aocrunner": "^1.6.1",
     "prettier": "^2.4.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nodemon": "^2.0.20"
+  },
   "engines": {
     "node": ">=16.13.0"
   }
